--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -38,6 +38,7 @@ jobs:
           tar czf ${{ matrix.target }}-x86_64-darwin.tar.gz ${{ matrix.target }}
           cd -
           mv /Volumes/tools/${{ matrix.target }}-x86_64-darwin.tar.gz .
+          sha256sum ${{ matrix.target }}-x86_64-darwin.tar.gz > ${{ matrix.target }}-x86_64-darwin.tar.gz.sha256
       - name: Upload Toolchain
         uses: actions/upload-artifact@v2
         with:
@@ -48,6 +49,6 @@ jobs:
         if: "startsWith(github.ref, 'refs/tags/')"
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          asset_name: ${{ matrix.target }}-x86_64-darwin.tar.gz
-          file: ${{ matrix.target }}-x86_64-darwin.tar.gz
+          file: ${{ matrix.target }}-x86_64-darwin.tar.gz*
+          file_glob: true
           tag: ${{ github.ref }}
