--- a/.github/workflows/aarch64.yml
+++ b/.github/workflows/aarch64.yml
@@ -42,6 +42,7 @@ jobs:
           tar czf ${{ matrix.target }}-aarch64-darwin.tar.gz ${{ matrix.target }}
           cd -
           mv /Volumes/tools/${{ matrix.target }}-aarch64-darwin.tar.gz .
+          sha256sum ${{ matrix.target }}-aarch64-darwin.tar.gz > ${{ matrix.target }}-aarch64-darwin.tar.gz.sha256
       - name: Remove volumes
         run: |
           hdiutil detach /Volumes/build
@@ -56,6 +57,6 @@ jobs:
         if: "startsWith(github.ref, 'refs/tags/')"
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          asset_name: ${{ matrix.target }}-aarch64-darwin.tar.gz
-          file: ${{ matrix.target }}-aarch64-darwin.tar.gz
+          file: ${{ matrix.target }}-aarch64-darwin.tar.gz*
+          file_glob: true
           tag: ${{ github.ref }}
