--- a/.github/workflows/aarch64.yml
+++ b/.github/workflows/aarch64.yml
@@ -1,7 +1,8 @@
 on:
   push:
+    branches:
+      - 'build/*'
     tags: ['v*']
-  pull_request:
 
 name: Build aarch64
 
@@ -16,9 +17,13 @@ jobs:
       matrix:
         target:
           - x86_64-unknown-linux-gnu
+          - x86_64-unknown-linux-musl
           - i686-unknown-linux-gnu
+          - i686-unknown-linux-musl
           - aarch64-unknown-linux-gnu
+          - aarch64-unknown-linux-musl
           - armv7-unknown-linux-gnueabihf
+          - armv7-unknown-linux-musleabihf
     steps:
       - uses: actions/checkout@v2
       - name: Install crosstool-ng
@@ -41,6 +46,9 @@ jobs:
           mkdir /Volumes/build/src
           cd ${{ matrix.target }}
           ct-ng build
+      - name: Tail build.log on failure
+        if: ${{ failure() }}
+        run: tail -n 500 ${{ matrix.target }}/build.log
       - name: Archive Toolchain
         run: |
           cd /Volumes/tools
