--- a/armv7-unknown-linux-gnueabihf/.config
+++ b/armv7-unknown-linux-gnueabihf/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# crosstool-NG UNKNOWN Configuration
+# crosstool-NG 1.24.0.332_0528a9d Configuration
 #
 CT_CONFIGURE_has_cxx11=y
 CT_CONFIGURE_has_lzip=y
@@ -23,7 +23,7 @@ CT_CONFIGURE_has_sha1sum=y
 CT_CONFIGURE_has_sha256sum=y
 CT_CONFIGURE_has_sha512sum=y
 CT_CONFIGURE_has_install_with_strip_program=y
-CT_VERSION="UNKNOWN"
+CT_VERSION="1.24.0.332_0528a9d"
 CT_VCHECK=""
 CT_CONFIG_VERSION_ENV="3"
 CT_CONFIG_VERSION_CURRENT="3"
@@ -139,6 +139,7 @@ CT_ARCH_ARM=y
 CT_ARCH="arm"
 CT_ARCH_CHOICE_KSYM="ARM"
 CT_ARCH_CPU=""
+CT_ARCH_TUNE=""
 CT_ARCH_ARM_SHOW=y
 
 #
@@ -187,6 +188,7 @@ CT_ARCH_SUPPORTS_WITH_FLOAT=y
 CT_ARCH_SUPPORTS_WITH_FPU=y
 CT_ARCH_SUPPORTS_SOFTFP=y
 CT_ARCH_EXCLUSIVE_WITH_CPU=y
+CT_ARCH_ARCH=""
 CT_ARCH_FPU="neon-vfpv4"
 # CT_ARCH_FLOAT_AUTO is not set
 CT_ARCH_FLOAT_HW=y
@@ -261,6 +263,7 @@ CT_LINUX_PKG_NAME="linux"
 CT_LINUX_SRC_RELEASE=y
 # CT_LINUX_SRC_DEVEL is not set
 CT_LINUX_PATCH_ORDER="global"
+# CT_LINUX_V_5_11 is not set
 CT_LINUX_V_5_10=y
 # CT_LINUX_V_5_9 is not set
 # CT_LINUX_V_5_8 is not set
@@ -291,7 +294,7 @@ CT_LINUX_V_5_10=y
 # CT_LINUX_V_3_4 is not set
 # CT_LINUX_V_3_2 is not set
 # CT_LINUX_V_2_6_32 is not set
-CT_LINUX_VERSION="5.10.7"
+CT_LINUX_VERSION="5.10.23"
 CT_LINUX_MIRRORS="$(CT_Mirrors kernel.org linux ${CT_LINUX_VERSION})"
 CT_LINUX_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -478,7 +481,7 @@ CT_GLIBC_FORCE_UNWIND=y
 # CT_GLIBC_KERNEL_VERSION_NONE is not set
 CT_GLIBC_KERNEL_VERSION_AS_HEADERS=y
 # CT_GLIBC_KERNEL_VERSION_CHOSEN is not set
-CT_GLIBC_MIN_KERNEL="5.10.7"
+CT_GLIBC_MIN_KERNEL="5.10.23"
 CT_ALL_LIBC_CHOICES="AVR_LIBC BIONIC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE UCLIBC"
 CT_LIBC_SUPPORT_THREADS_ANY=y
 CT_LIBC_SUPPORT_THREADS_NATIVE=y
@@ -527,7 +530,7 @@ CT_GCC_V_10=y
 # CT_GCC_V_6 is not set
 # CT_GCC_V_5 is not set
 # CT_GCC_V_4_9 is not set
-CT_GCC_VERSION="10.2.0"
+CT_GCC_VERSION="10.3.0"
 CT_GCC_MIRRORS="$(CT_Mirrors GNU gcc/gcc-${CT_GCC_VERSION}) $(CT_Mirrors sourceware gcc/releases/gcc-${CT_GCC_VERSION})"
 CT_GCC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -663,8 +666,8 @@ CT_EXPAT_PKG_NAME="expat"
 CT_EXPAT_SRC_RELEASE=y
 # CT_EXPAT_SRC_DEVEL is not set
 CT_EXPAT_PATCH_ORDER="global"
-CT_EXPAT_V_2_2=y
-CT_EXPAT_VERSION="2.2.9"
+CT_EXPAT_V_2_3=y
+CT_EXPAT_VERSION="2.3.0"
 CT_EXPAT_MIRRORS="http://downloads.sourceforge.net/project/expat/expat/${CT_EXPAT_VERSION} https://github.com/libexpat/libexpat/releases/download/R_${CT_EXPAT_VERSION//./_}"
 CT_EXPAT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_EXPAT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
