Add arm v6 gnueabi[hf] targets

--- a/.github/workflows/aarch64.yml
+++ b/.github/workflows/aarch64.yml
@@ -24,6 +24,8 @@ jobs:
           - aarch64-unknown-linux-musl
           - armv7-unknown-linux-gnueabihf
           - armv7-unknown-linux-musleabihf
+          # - arm-unknown-linux-gnueabi
+          # - arm-unknown-linux-gnueabihf
     steps:
       - uses: actions/checkout@v2
       - name: Install crosstool-ng
