--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -11,6 +11,7 @@ jobs:
     name: Build
     runs-on: macos-latest
     strategy:
+      fail-fast: false
       matrix:
         target:
           - x86_64-unknown-linux-gnu
