Update linux kernal versions

--- a/aarch64-unknown-linux-gnu/.config
+++ b/aarch64-unknown-linux-gnu/.config
@@ -254,7 +254,7 @@ CT_LINUX_PATCH_ORDER="global"
 # CT_LINUX_V_5_13 is not set
 # CT_LINUX_V_5_12 is not set
 # CT_LINUX_V_5_11 is not set
-CT_LINUX_V_5_10=y
+# CT_LINUX_V_5_10 is not set
 # CT_LINUX_V_5_9 is not set
 # CT_LINUX_V_5_8 is not set
 # CT_LINUX_V_5_7 is not set
@@ -268,7 +268,7 @@ CT_LINUX_V_5_10=y
 # CT_LINUX_V_4_18 is not set
 # CT_LINUX_V_4_17 is not set
 # CT_LINUX_V_4_16 is not set
-# CT_LINUX_V_4_15 is not set
+CT_LINUX_V_4_15=y
 # CT_LINUX_V_4_14 is not set
 # CT_LINUX_V_4_13 is not set
 # CT_LINUX_V_4_12 is not set
@@ -281,14 +281,14 @@ CT_LINUX_V_5_10=y
 # CT_LINUX_V_3_13 is not set
 # CT_LINUX_V_3_12 is not set
 # CT_LINUX_V_3_10 is not set
-CT_LINUX_VERSION="5.10.79"
+CT_LINUX_VERSION="4.15.18"
 CT_LINUX_MIRRORS="$(CT_Mirrors kernel.org linux ${CT_LINUX_VERSION})"
 CT_LINUX_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_LINUX_SIGNATURE_FORMAT="unpacked/.sign"
-CT_LINUX_later_than_5_3=y
-CT_LINUX_5_3_or_later=y
+CT_LINUX_5_3_or_older=y
+CT_LINUX_older_than_5_3=y
 CT_LINUX_later_than_4_8=y
 CT_LINUX_4_8_or_later=y
 CT_LINUX_later_than_3_7=y
