--- a/arm-unknown-linux-gnueabihf/.config
+++ b/arm-unknown-linux-gnueabihf/.config
@@ -266,7 +266,7 @@ CT_LINUX_PATCH_ORDER="global"
 # CT_LINUX_V_5_15 is not set
 # CT_LINUX_V_5_14 is not set
 # CT_LINUX_V_5_13 is not set
-CT_LINUX_V_5_12=y
+# CT_LINUX_V_5_12 is not set
 # CT_LINUX_V_5_11 is not set
 # CT_LINUX_V_5_10 is not set
 # CT_LINUX_V_5_9 is not set
@@ -283,7 +283,7 @@ CT_LINUX_V_5_12=y
 # CT_LINUX_V_4_18 is not set
 # CT_LINUX_V_4_17 is not set
 # CT_LINUX_V_4_16 is not set
-# CT_LINUX_V_4_15 is not set
+CT_LINUX_V_4_15=y
 # CT_LINUX_V_4_14 is not set
 # CT_LINUX_V_4_13 is not set
 # CT_LINUX_V_4_12 is not set
@@ -300,14 +300,14 @@ CT_LINUX_V_5_12=y
 # CT_LINUX_V_3_4 is not set
 # CT_LINUX_V_3_2 is not set
 # CT_LINUX_V_2_6_32 is not set
-CT_LINUX_VERSION="5.12.16"
+CT_LINUX_VERSION="4.15.18"
 CT_LINUX_MIRRORS="$(CT_Mirrors kernel.org linux ${CT_LINUX_VERSION})"
 CT_LINUX_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_LINUX_SIGNATURE_FORMAT="unpacked/.sign"
-CT_LINUX_later_than_5_3=y
-CT_LINUX_5_3_or_later=y
+CT_LINUX_5_3_or_older=y
+CT_LINUX_older_than_5_3=y
 CT_LINUX_later_than_4_8=y
 CT_LINUX_4_8_or_later=y
 CT_LINUX_later_than_3_7=y
@@ -349,8 +349,8 @@ CT_BINUTILS_PKG_NAME="binutils"
 CT_BINUTILS_SRC_RELEASE=y
 # CT_BINUTILS_SRC_DEVEL is not set
 CT_BINUTILS_PATCH_ORDER="global"
-# CT_BINUTILS_V_2_38 is not set
-CT_BINUTILS_V_2_37=y
+CT_BINUTILS_V_2_38=y
+# CT_BINUTILS_V_2_37 is not set
 # CT_BINUTILS_V_2_36 is not set
 # CT_BINUTILS_V_2_35 is not set
 # CT_BINUTILS_V_2_34 is not set
@@ -362,7 +362,7 @@ CT_BINUTILS_V_2_37=y
 # CT_BINUTILS_V_2_28 is not set
 # CT_BINUTILS_V_2_27 is not set
 # CT_BINUTILS_V_2_26 is not set
-CT_BINUTILS_VERSION="2.37"
+CT_BINUTILS_VERSION="2.38"
 CT_BINUTILS_MIRRORS="$(CT_Mirrors GNU binutils) $(CT_Mirrors sourceware binutils/releases)"
 CT_BINUTILS_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_BINUTILS_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -488,7 +488,7 @@ CT_GLIBC_FORCE_UNWIND=y
 # CT_GLIBC_KERNEL_VERSION_NONE is not set
 CT_GLIBC_KERNEL_VERSION_AS_HEADERS=y
 # CT_GLIBC_KERNEL_VERSION_CHOSEN is not set
-CT_GLIBC_MIN_KERNEL="5.12.16"
+CT_GLIBC_MIN_KERNEL="4.15.18"
 # CT_GLIBC_ENABLE_COMMON_FLAG is not set
 CT_ALL_LIBC_CHOICES="AVR_LIBC BIONIC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE UCLIBC"
 CT_LIBC_SUPPORT_THREADS_ANY=y
@@ -529,22 +529,22 @@ CT_GCC_PKG_NAME="gcc"
 CT_GCC_SRC_RELEASE=y
 # CT_GCC_SRC_DEVEL is not set
 CT_GCC_PATCH_ORDER="global"
-# CT_GCC_V_11 is not set
-CT_GCC_V_10=y
+CT_GCC_V_11=y
+# CT_GCC_V_10 is not set
 # CT_GCC_V_9 is not set
 # CT_GCC_V_8 is not set
 # CT_GCC_V_7 is not set
 # CT_GCC_V_6 is not set
 # CT_GCC_V_5 is not set
 # CT_GCC_V_4_9 is not set
-CT_GCC_VERSION="10.3.0"
+CT_GCC_VERSION="11.2.0"
 CT_GCC_MIRRORS="$(CT_Mirrors GNU gcc/gcc-${CT_GCC_VERSION}) $(CT_Mirrors sourceware gcc/releases/gcc-${CT_GCC_VERSION})"
 CT_GCC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GCC_SIGNATURE_FORMAT=""
-CT_GCC_11_or_older=y
-CT_GCC_older_than_11=y
+CT_GCC_later_than_11=y
+CT_GCC_11_or_later=y
 CT_GCC_later_than_10=y
 CT_GCC_10_or_later=y
 CT_GCC_later_than_9=y
@@ -618,22 +618,7 @@ CT_CC_LANG_FORTRAN=y
 #
 # Debug facilities
 #
-CT_DEBUG_DUMA=y
-CT_DEBUG_DUMA_PKG_KSYM="DUMA"
-CT_DUMA_DIR_NAME="duma"
-CT_DUMA_PKG_NAME="duma"
-CT_DUMA_SRC_RELEASE=y
-# CT_DUMA_SRC_DEVEL is not set
-CT_DUMA_PATCH_ORDER="global"
-CT_DUMA_V_2_5_15=y
-CT_DUMA_VERSION="2_5_15"
-CT_DUMA_MIRRORS="http://downloads.sourceforge.net/project/duma/duma/${CT_DUMA_VERSION//_/.}"
-CT_DUMA_ARCHIVE_FILENAME="@{pkg_name}_@{version}"
-CT_DUMA_ARCHIVE_DIRNAME="@{pkg_name}_@{version}"
-CT_DUMA_ARCHIVE_FORMATS=".tar.gz .zip"
-CT_DUMA_SIGNATURE_FORMAT=""
-CT_DUMA_SO=y
-CT_DUMA_CUSTOM_WRAPPER=y
+# CT_DEBUG_DUMA is not set
 CT_DEBUG_GDB=y
 CT_DEBUG_GDB_PKG_KSYM="GDB"
 CT_GDB_DIR_NAME="gdb"
@@ -678,58 +663,8 @@ CT_GDB_GDBSERVER=y
 # CT_GDB_NATIVE_BUILD_IPA_LIB is not set
 # CT_GDB_NATIVE_STATIC_LIBSTDCXX is not set
 CT_GDB_GDBSERVER_TOPLEVEL=y
-CT_DEBUG_LTRACE=y
-CT_DEBUG_LTRACE_PKG_KSYM="LTRACE"
-CT_LTRACE_DIR_NAME="ltrace"
-CT_LTRACE_PKG_NAME="ltrace"
-CT_LTRACE_SRC_RELEASE=y
-# CT_LTRACE_SRC_DEVEL is not set
-CT_LTRACE_PATCH_ORDER="global"
-CT_LTRACE_V_0_7_3=y
-CT_LTRACE_VERSION="0.7.3"
-CT_LTRACE_MIRRORS="http://ftp.debian.org/debian/pool/main/l/ltrace ftp://ftp.debian.org/debian/pool/main/l/ltrace"
-CT_LTRACE_ARCHIVE_FILENAME="@{pkg_name}_@{version}.orig"
-CT_LTRACE_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_LTRACE_ARCHIVE_FORMATS=".tar.bz2"
-CT_LTRACE_SIGNATURE_FORMAT=""
-CT_DEBUG_STRACE=y
-CT_DEBUG_STRACE_PKG_KSYM="STRACE"
-CT_STRACE_DIR_NAME="strace"
-CT_STRACE_PKG_NAME="strace"
-CT_STRACE_SRC_RELEASE=y
-# CT_STRACE_SRC_DEVEL is not set
-CT_STRACE_PATCH_ORDER="global"
-# CT_STRACE_V_5_14 is not set
-CT_STRACE_V_5_11=y
-# CT_STRACE_V_5_10 is not set
-# CT_STRACE_V_5_9 is not set
-# CT_STRACE_V_5_8 is not set
-# CT_STRACE_V_5_7 is not set
-# CT_STRACE_V_5_6 is not set
-# CT_STRACE_V_5_5 is not set
-# CT_STRACE_V_5_4 is not set
-# CT_STRACE_V_5_3 is not set
-# CT_STRACE_V_5_2 is not set
-# CT_STRACE_V_5_1 is not set
-# CT_STRACE_V_5_0 is not set
-# CT_STRACE_V_4_26 is not set
-# CT_STRACE_V_4_25 is not set
-# CT_STRACE_V_4_24 is not set
-# CT_STRACE_V_4_23 is not set
-# CT_STRACE_V_4_22 is not set
-# CT_STRACE_V_4_21 is not set
-# CT_STRACE_V_4_20 is not set
-# CT_STRACE_V_4_19 is not set
-# CT_STRACE_V_4_18 is not set
-# CT_STRACE_V_4_17 is not set
-# CT_STRACE_V_4_16 is not set
-# CT_STRACE_V_4_15 is not set
-CT_STRACE_VERSION="5.11"
-CT_STRACE_MIRRORS="https://strace.io/files/${CT_STRACE_VERSION} https://github.com/strace/strace/releases/download/v${CT_STRACE_VERSION}"
-CT_STRACE_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
-CT_STRACE_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_STRACE_ARCHIVE_FORMATS=".tar.xz"
-CT_STRACE_SIGNATURE_FORMAT=""
+# CT_DEBUG_LTRACE is not set
+# CT_DEBUG_STRACE is not set
 CT_ALL_DEBUG_CHOICES="DUMA GDB LTRACE STRACE"
 # end of Debug facilities
 
@@ -936,7 +871,6 @@ CT_GMP_TARGET=y
 CT_MPFR_NEEDED=y
 CT_ISL_NEEDED=y
 CT_MPC_NEEDED=y
-CT_LIBELF_TARGET=y
 CT_EXPAT_NEEDED=y
 CT_EXPAT_TARGET=y
 CT_NCURSES_NEEDED=y
