--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -9,7 +9,7 @@ name: Build x86_64
 jobs:
   build:
     name: Build
-    runs-on: macos-latest
+    runs-on: macos-10.15
     strategy:
       fail-fast: false
       matrix:
