Run ct-ng build with `nproc - 1`

--- a/.github/workflows/aarch64.yml
+++ b/.github/workflows/aarch64.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           mkdir /Volumes/build/src
           cd ${{ matrix.target }}
-          ct-ng build
+          ct-ng build -j $(($(nproc) - 1))
       - name: Tail build.log on failure
         if: ${{ failure() }}
         run: tail -n 500 ${{ matrix.target }}/build.log
