Don't build gdbserver

--- a/aarch64-unknown-linux-musl/.config
+++ b/aarch64-unknown-linux-musl/.config
@@ -649,9 +649,7 @@ CT_GDB_CROSS_PYTHON=y
 CT_GDB_CROSS_PYTHON_BINARY=""
 CT_GDB_CROSS_EXTRA_CONFIG_ARRAY=""
 # CT_GDB_NATIVE is not set
-CT_GDB_GDBSERVER=y
-# CT_GDB_NATIVE_STATIC is not set
-# CT_GDB_NATIVE_STATIC_LIBSTDCXX is not set
+# CT_GDB_GDBSERVER is not set
 CT_GDB_GDBSERVER_TOPLEVEL=y
 # CT_DEBUG_LTRACE is not set
 # CT_DEBUG_STRACE is not set
