--- a/arm-unknown-linux-gnueabi/.config
+++ b/arm-unknown-linux-gnueabi/.config
@@ -657,10 +657,8 @@ CT_GDB_CROSS=y
 # CT_GDB_CROSS_SIM is not set
 # CT_GDB_CROSS_PYTHON is not set
 CT_GDB_CROSS_EXTRA_CONFIG_ARRAY=""
-CT_GDB_NATIVE=y
-CT_GDB_GDBSERVER=y
-# CT_GDB_NATIVE_BUILD_IPA_LIB is not set
-# CT_GDB_NATIVE_STATIC_LIBSTDCXX is not set
+# CT_GDB_NATIVE is not set
+# CT_GDB_GDBSERVER is not set
 CT_GDB_GDBSERVER_TOPLEVEL=y
 # CT_DEBUG_LTRACE is not set
 # CT_DEBUG_STRACE is not set
@@ -866,14 +864,11 @@ CT_ALL_COMP_LIBS_CHOICES="CLOOG EXPAT GETTEXT GMP GNUPRUMCU ISL LIBELF LIBICONV 
 CT_LIBICONV_NEEDED=y
 CT_GETTEXT_NEEDED=y
 CT_GMP_NEEDED=y
-CT_GMP_TARGET=y
 CT_MPFR_NEEDED=y
 CT_ISL_NEEDED=y
 CT_MPC_NEEDED=y
 CT_EXPAT_NEEDED=y
-CT_EXPAT_TARGET=y
 CT_NCURSES_NEEDED=y
-CT_NCURSES_TARGET=y
 CT_ZLIB_NEEDED=y
 CT_LIBICONV=y
 CT_GETTEXT=y
