--- a/armv7-unknown-linux-gnueabihf/.config
+++ b/armv7-unknown-linux-gnueabihf/.config
@@ -655,9 +655,7 @@ CT_GDB_CROSS_PYTHON=y
 CT_GDB_CROSS_PYTHON_BINARY=""
 CT_GDB_CROSS_EXTRA_CONFIG_ARRAY=""
 # CT_GDB_NATIVE is not set
-CT_GDB_GDBSERVER=y
-# CT_GDB_NATIVE_BUILD_IPA_LIB is not set
-# CT_GDB_NATIVE_STATIC_LIBSTDCXX is not set
+# CT_GDB_GDBSERVER is not set
 CT_GDB_GDBSERVER_TOPLEVEL=y
 # CT_DEBUG_LTRACE is not set
 # CT_DEBUG_STRACE is not set
