--- a/arm-unknown-linux-musleabihf/.config
+++ b/arm-unknown-linux-musleabihf/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# crosstool-NG 1.25.0.130_c7bfd36 Configuration
+# crosstool-NG 1.25.0 Configuration
 #
 CT_CONFIGURE_has_cxx11=y
 CT_CONFIGURE_has_lzip=y
@@ -11,13 +11,12 @@ CT_CONFIGURE_has_make_3_81_or_newer=y
 CT_CONFIGURE_has_make_4_0_or_newer=y
 CT_CONFIGURE_has_libtool_2_4_or_newer=y
 CT_CONFIGURE_has_libtoolize_2_4_or_newer=y
-CT_CONFIGURE_has_autoconf_2_71_or_newer=y
-CT_CONFIGURE_has_autoreconf_2_71_or_newer=y
-CT_CONFIGURE_has_automake_1_16_or_newer=y
+CT_CONFIGURE_has_autoconf_2_65_or_newer=y
+CT_CONFIGURE_has_autoreconf_2_65_or_newer=y
+CT_CONFIGURE_has_automake_1_15_or_newer=y
 CT_CONFIGURE_has_gnu_m4_1_4_12_or_newer=y
 CT_CONFIGURE_has_python_3_4_or_newer=y
 CT_CONFIGURE_has_bison_2_7_or_newer=y
-CT_CONFIGURE_has_bison_3_0_4_or_newer=y
 CT_CONFIGURE_has_python=y
 CT_CONFIGURE_has_svn=y
 CT_CONFIGURE_has_git=y
@@ -26,7 +25,7 @@ CT_CONFIGURE_has_sha1sum=y
 CT_CONFIGURE_has_sha256sum=y
 CT_CONFIGURE_has_sha512sum=y
 CT_CONFIGURE_has_install_with_strip_program=y
-CT_VERSION="1.25.0.130_c7bfd36"
+CT_VERSION="1.25.0"
 CT_VCHECK=""
 CT_CONFIG_VERSION_ENV="4"
 CT_CONFIG_VERSION_CURRENT="4"
@@ -62,7 +61,6 @@ CT_INSTALL_LICENSES=y
 # CT_PREFIX_DIR_RO is not set
 CT_STRIP_HOST_TOOLCHAIN_EXECUTABLES=y
 # CT_STRIP_TARGET_TOOLCHAIN_EXECUTABLES is not set
-# CT_TARBALL_RESULT is not set
 
 #
 # Downloading
@@ -136,9 +134,7 @@ CT_LOG_FILE_COMPRESS=y
 # CT_ARCH_ARC is not set
 CT_ARCH_ARM=y
 # CT_ARCH_AVR is not set
-# CT_ARCH_BPF is not set
 # CT_ARCH_C6X is not set
-# CT_ARCH_LOONGARCH is not set
 # CT_ARCH_M68K is not set
 # CT_ARCH_MICROBLAZE is not set
 # CT_ARCH_MIPS is not set
@@ -170,7 +166,7 @@ CT_ARCH_ARM_MODE_ARM=y
 CT_ARCH_ARM_EABI_FORCE=y
 CT_ARCH_ARM_EABI=y
 CT_ARCH_ARM_TUPLE_USE_EABIHF=y
-CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR BPF C6X LOONGARCH M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 POWERPC PRU RISCV S390 SH SPARC X86 XTENSA"
+CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR C6X M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 POWERPC PRU RISCV S390 SH SPARC X86 XTENSA"
 CT_ARCH_SUFFIX=""
 # CT_OMIT_TARGET_VENDOR is not set
 
@@ -183,7 +179,6 @@ CT_ARCH_SUPPORTS_BOTH_MMU=y
 CT_ARCH_DEFAULT_HAS_MMU=y
 CT_ARCH_USE_MMU=y
 CT_ARCH_SUPPORTS_FLAT_FORMAT=y
-CT_ARCH_SUPPORTS_LIBSANITIZER=y
 CT_ARCH_SUPPORTS_EITHER_ENDIAN=y
 CT_ARCH_DEFAULT_LE=y
 # CT_ARCH_BE is not set
@@ -237,7 +232,7 @@ CT_TOOLCHAIN_BUGURL=""
 #
 CT_TARGET_VENDOR="unknown"
 CT_TARGET_ALIAS_SED_EXPR=""
-CT_TARGET_ALIAS=""
+CT_TARGET_ALIAS="arm-linux-musleabihf"
 
 #
 # Toolchain type
@@ -290,11 +285,6 @@ CT_LINUX_PATCH_GLOBAL=y
 # CT_LINUX_PATCH_LOCAL_BUNDLED is not set
 # CT_LINUX_PATCH_NONE is not set
 CT_LINUX_PATCH_ORDER="global"
-# CT_LINUX_V_6_1 is not set
-# CT_LINUX_V_6_0 is not set
-# CT_LINUX_V_5_19 is not set
-# CT_LINUX_V_5_18 is not set
-# CT_LINUX_V_5_17 is not set
 # CT_LINUX_V_5_16 is not set
 # CT_LINUX_V_5_15 is not set
 # CT_LINUX_V_5_14 is not set
@@ -337,12 +327,8 @@ CT_LINUX_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_LINUX_SIGNATURE_FORMAT="unpacked/.sign"
-CT_LINUX_5_19_or_older=y
-CT_LINUX_older_than_5_19=y
 CT_LINUX_5_12_or_older=y
 CT_LINUX_older_than_5_12=y
-CT_LINUX_5_5_or_older=y
-CT_LINUX_older_than_5_5=y
 CT_LINUX_5_3_or_older=y
 CT_LINUX_older_than_5_3=y
 CT_LINUX_later_than_4_8=y
@@ -394,7 +380,6 @@ CT_BINUTILS_PATCH_GLOBAL=y
 # CT_BINUTILS_PATCH_LOCAL_BUNDLED is not set
 # CT_BINUTILS_PATCH_NONE is not set
 CT_BINUTILS_PATCH_ORDER="global"
-# CT_BINUTILS_V_2_39 is not set
 CT_BINUTILS_V_2_38=y
 # CT_BINUTILS_V_2_37 is not set
 # CT_BINUTILS_V_2_36 is not set
@@ -414,8 +399,6 @@ CT_BINUTILS_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_BINUTILS_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_BINUTILS_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
 CT_BINUTILS_SIGNATURE_FORMAT="packed/.sig"
-CT_BINUTILS_2_39_or_older=y
-CT_BINUTILS_older_than_2_39=y
 CT_BINUTILS_later_than_2_30=y
 CT_BINUTILS_2_30_or_later=y
 CT_BINUTILS_later_than_2_27=y
@@ -473,7 +456,6 @@ CT_MUSL_PATCH_GLOBAL=y
 # CT_MUSL_PATCH_LOCAL_BUNDLED is not set
 # CT_MUSL_PATCH_NONE is not set
 CT_MUSL_PATCH_ORDER="global"
-# CT_MUSL_V_1_2_3 is not set
 CT_MUSL_V_1_2_2=y
 # CT_MUSL_V_1_2_1 is not set
 # CT_MUSL_V_1_1_24 is not set
@@ -498,7 +480,7 @@ CT_LIBC_MUSL_OPTIMIZE_AUTO=y
 # CT_LIBC_MUSL_OPTIMIZE_SPEED is not set
 # CT_LIBC_MUSL_OPTIMIZE_SIZE is not set
 CT_LIBC_MUSL_OPTIMIZE="auto"
-CT_ALL_LIBC_CHOICES="AVR_LIBC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE UCLIBC_NG"
+CT_ALL_LIBC_CHOICES="AVR_LIBC BIONIC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE UCLIBC_NG"
 CT_LIBC_SUPPORT_THREADS_ANY=y
 CT_LIBC_SUPPORT_THREADS_NATIVE=y
 
@@ -517,8 +499,6 @@ CT_CC_CORE_NEEDED=y
 CT_CC_SUPPORT_CXX=y
 CT_CC_SUPPORT_FORTRAN=y
 CT_CC_SUPPORT_ADA=y
-CT_CC_SUPPORT_D=y
-CT_CC_SUPPORT_JIT=y
 CT_CC_SUPPORT_OBJC=y
 CT_CC_SUPPORT_OBJCXX=y
 CT_CC_SUPPORT_GOLANG=y
@@ -534,7 +514,6 @@ CT_CC_GCC_PKG_KSYM="GCC"
 CT_GCC_DIR_NAME="gcc"
 CT_GCC_USE_GNU=y
 # CT_GCC_USE_LINARO is not set
-# CT_GCC_USE_ORACLE is not set
 CT_GCC_USE="GCC"
 CT_GCC_PKG_NAME="gcc"
 CT_GCC_SRC_RELEASE=y
@@ -547,7 +526,6 @@ CT_GCC_PATCH_GLOBAL=y
 # CT_GCC_PATCH_LOCAL_BUNDLED is not set
 # CT_GCC_PATCH_NONE is not set
 CT_GCC_PATCH_ORDER="global"
-# CT_GCC_V_12 is not set
 CT_GCC_V_11=y
 # CT_GCC_V_10 is not set
 # CT_GCC_V_9 is not set
@@ -556,14 +534,12 @@ CT_GCC_V_11=y
 # CT_GCC_V_6 is not set
 # CT_GCC_V_5 is not set
 # CT_GCC_V_4_9 is not set
-CT_GCC_VERSION="11.3.0"
+CT_GCC_VERSION="11.2.0"
 CT_GCC_MIRRORS="$(CT_Mirrors GNU gcc/gcc-${CT_GCC_VERSION}) $(CT_Mirrors sourceware gcc/releases/gcc-${CT_GCC_VERSION})"
 CT_GCC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GCC_SIGNATURE_FORMAT=""
-CT_GCC_12_or_older=y
-CT_GCC_older_than_12=y
 CT_GCC_later_than_11=y
 CT_GCC_11_or_later=y
 CT_GCC_later_than_10=y
@@ -599,13 +575,11 @@ CT_CC_GCC_LTO_ZSTD=m
 #
 # Settings for libraries running on target
 #
-CT_CC_GCC_ENABLE_DEFAULT_PIE=y
 CT_CC_GCC_ENABLE_TARGET_OPTSPACE=y
 # CT_CC_GCC_LIBMUDFLAP is not set
-# CT_CC_GCC_LIBGOMP is not set
-# CT_CC_GCC_LIBSSP is not set
-# CT_CC_GCC_LIBQUADMATH is not set
-CT_CC_GCC_LIBSTDCXX_VERBOSE=m
+CT_CC_GCC_LIBGOMP=y
+CT_CC_GCC_LIBSSP=y
+CT_CC_GCC_LIBQUADMATH=y
 
 #
 # Misc. obscure options.
@@ -633,9 +607,7 @@ CT_ALL_CC_CHOICES="GCC"
 #
 CT_CC_LANG_CXX=y
 CT_CC_LANG_FORTRAN=y
-# CT_CC_LANG_JIT is not set
 # CT_CC_LANG_ADA is not set
-# CT_CC_LANG_D is not set
 # CT_CC_LANG_OBJC is not set
 # CT_CC_LANG_OBJCXX is not set
 # CT_CC_LANG_GOLANG is not set
@@ -660,7 +632,6 @@ CT_GDB_PATCH_GLOBAL=y
 # CT_GDB_PATCH_LOCAL_BUNDLED is not set
 # CT_GDB_PATCH_NONE is not set
 CT_GDB_PATCH_ORDER="global"
-# CT_GDB_V_12 is not set
 CT_GDB_V_11=y
 # CT_GDB_V_10 is not set
 # CT_GDB_V_9 is not set
@@ -671,14 +642,18 @@ CT_GDB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GDB_SIGNATURE_FORMAT=""
-CT_GDB_12_or_older=y
-CT_GDB_older_than_12=y
 CT_GDB_later_than_11=y
 CT_GDB_11_or_later=y
 CT_GDB_later_than_10=y
 CT_GDB_10_or_later=y
 CT_GDB_later_than_8_3=y
 CT_GDB_8_3_or_later=y
+CT_GDB_later_than_8_0=y
+CT_GDB_8_0_or_later=y
+CT_GDB_later_than_7_12=y
+CT_GDB_7_12_or_later=y
+CT_GDB_later_than_7_11=y
+CT_GDB_7_11_or_later=y
 CT_GDB_CROSS=y
 # CT_GDB_CROSS_SIM is not set
 CT_GDB_CROSS_PYTHON=y
@@ -711,8 +686,8 @@ CT_EXPAT_PATCH_GLOBAL=y
 # CT_EXPAT_PATCH_LOCAL_BUNDLED is not set
 # CT_EXPAT_PATCH_NONE is not set
 CT_EXPAT_PATCH_ORDER="global"
-CT_EXPAT_V_2_5=y
-CT_EXPAT_VERSION="2.5.0"
+CT_EXPAT_V_2_4=y
+CT_EXPAT_VERSION="2.4.1"
 CT_EXPAT_MIRRORS="http://downloads.sourceforge.net/project/expat/expat/${CT_EXPAT_VERSION} https://github.com/libexpat/libexpat/releases/download/R_${CT_EXPAT_VERSION//./_}"
 CT_EXPAT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_EXPAT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -931,33 +906,12 @@ CT_ZLIB_PATCH_GLOBAL=y
 CT_ZLIB_PATCH_ORDER="global"
 CT_ZLIB_V_1_2_13=y
 CT_ZLIB_VERSION="1.2.13"
-CT_ZLIB_MIRRORS="https://github.com/madler/zlib/releases/download/v${CT_ZLIB_VERSION} https://www.zlib.net/"
+CT_ZLIB_MIRRORS="http://downloads.sourceforge.net/project/libpng/zlib/${CT_ZLIB_VERSION} https://www.zlib.net/"
 CT_ZLIB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ZLIB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_ZLIB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_ZLIB_SIGNATURE_FORMAT="packed/.asc"
-CT_COMP_LIBS_ZSTD=y
-CT_COMP_LIBS_ZSTD_PKG_KSYM="ZSTD"
-CT_ZSTD_DIR_NAME="zstd"
-CT_ZSTD_PKG_NAME="zstd"
-CT_ZSTD_SRC_RELEASE=y
-# CT_ZSTD_SRC_DEVEL is not set
-# CT_ZSTD_SRC_CUSTOM is not set
-CT_ZSTD_PATCH_GLOBAL=y
-# CT_ZSTD_PATCH_BUNDLED is not set
-# CT_ZSTD_PATCH_LOCAL is not set
-# CT_ZSTD_PATCH_BUNDLED_LOCAL is not set
-# CT_ZSTD_PATCH_LOCAL_BUNDLED is not set
-# CT_ZSTD_PATCH_NONE is not set
-CT_ZSTD_PATCH_ORDER="global"
-CT_ZSTD_V_1_5_2=y
-CT_ZSTD_VERSION="1.5.2"
-CT_ZSTD_MIRRORS="https://github.com/facebook/zstd/releases/download/v${CT_ZSTD_VERSION} https://www.zstd.net/"
-CT_ZSTD_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
-CT_ZSTD_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_ZSTD_ARCHIVE_FORMATS=".tar.gz"
-CT_ZSTD_SIGNATURE_FORMAT="packed/.sig"
-CT_ALL_COMP_LIBS_CHOICES="CLOOG EXPAT GETTEXT GMP GNUPRUMCU ISL LIBELF LIBICONV MPC MPFR NCURSES NEWLIB_NANO PICOLIBC ZLIB ZSTD"
+CT_ALL_COMP_LIBS_CHOICES="CLOOG EXPAT GETTEXT GMP GNUPRUMCU ISL LIBELF LIBICONV MPC MPFR NCURSES NEWLIB_NANO PICOLIBC ZLIB"
 CT_LIBICONV_NEEDED=y
 CT_GETTEXT_NEEDED=y
 CT_GMP_NEEDED=y
@@ -967,7 +921,6 @@ CT_MPC_NEEDED=y
 CT_EXPAT_NEEDED=y
 CT_NCURSES_NEEDED=y
 CT_ZLIB_NEEDED=y
-CT_ZSTD_NEEDED=y
 CT_LIBICONV=y
 CT_GETTEXT=y
 CT_GMP=y
@@ -977,7 +930,6 @@ CT_MPC=y
 CT_EXPAT=y
 CT_NCURSES=y
 CT_ZLIB=y
-CT_ZSTD=y
 # end of Companion libraries
 
 #
