--- a/.github/workflows/aarch64.yml
+++ b/.github/workflows/aarch64.yml
@@ -10,10 +10,7 @@ name: Build aarch64
 jobs:
   build:
     name: Build
-    runs-on: [self-hosted, macOS, arm64]
-    defaults:
-      run:
-        shell: "/usr/bin/arch -arch arm64e /bin/bash -l {0}"
+    runs-on: [self-hosted, macOS, ARM64]
     strategy:
       fail-fast: false
       matrix:
@@ -30,12 +27,13 @@ jobs:
           - arm-unknown-linux-gnueabihf
           - arm-unknown-linux-musleabihf
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Install crosstool-ng
         run: |
           brew install coreutils crosstool-ng
       - name: Mount volumes
         run: |
+          set -ex
           hdiutil create -type SPARSE -fs 'Case-sensitive Journaled HFS+' -size 16g -volname build build.dmg
           hdiutil create -type SPARSE -fs 'Case-sensitive Journaled HFS+' -size 1g -volname tools tools.dmg
           # Detach old if exists
@@ -47,6 +45,7 @@ jobs:
           ls /Volumes
       - name: Build Toolchain
         run: |
+          set -ex
           mkdir /Volumes/build/src
           cd ${{ matrix.target }}
           ct-ng build -j $(($(nproc) - 1))
@@ -55,6 +54,7 @@ jobs:
         run: tail -n 500 ${{ matrix.target }}/build.log
       - name: Archive Toolchain
         run: |
+          set -ex
           cd /Volumes/tools
           tar czf ${{ matrix.target }}-aarch64-darwin.tar.gz ${{ matrix.target }}
           cd -
@@ -66,10 +66,11 @@ jobs:
           hdiutil detach /Volumes/build -force | true
           hdiutil detach /Volumes/tools -force | true
       - name: Upload Toolchain
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: toolchains
           path: ${{ matrix.target }}-aarch64-darwin.tar.gz
+          if-no-files-found: error
       - name: Upload Toolchain to GitHub Release
         uses: svenstaro/upload-release-action@v2
         if: "startsWith(github.ref, 'refs/tags/')"
